# shipinsdk

./: ARCHITECTURE_AND_ROADMAP.md  CMakeLists.txt  README.md  TikTok_SDK_2200_Tasks_Plan.csv  TikTok_SDK_6750_Tasks_Plan.csv  TikTok_SDK_6750_Tasks_Plan.md
sdk/base/: FrameQueue.h
sdk/base/error/: SDKError.h
sdk/base/memory/: ObjectPool.h
sdk/base/queue/: ILockFreeQueue.h  LockFreeQueue.cpp  LockFreeQueue.h
sdk/base/queue/mock/: MockLockFreeQueue.h
sdk/base/state/: SDKState.h
sdk/core/: MediaFrame.h
sdk/core/rhi/: IRHI.h  RHIBuffer.h  RHICommandBuffer.h  RHIPipelineState.h  RHIShader.h  RHISwapchain.h  RHITexture.h
sdk/pipeline/node/: INode.h  NodeBase.cpp  NodeBase.h  SinkNode.h  SourceNode.h
sdk/render/: AngleContextFactory.h  IGraphicsContext.h
sdk/render/rhi/: RHIFactory.cpp  RHIFactory.h
sdk/render/rhi/metal/: MetalDevice.h  MetalDevice.mm
sdk/render/rhi/opengl/: GLDevice.cpp  GLDevice.h
sdk/render/rhi/vulkan/: VulkanDevice.cpp  VulkanDevice.h
test/sdk_base/queue/: LockFreeQueueTest.cpp
test/sdk_pipeline/node/: DAGTopologyTest.cpp
